<resources>
    <string name="app_name">SmileAlarm</string>
    <string name="title_activity_edit_alarm">EditAlarm</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_thanks">Thanks</string>
    <string name="alarm_time_default">00:00</string>
    <string name="time_till_next_alarm_main">Next alarm in:</string>
    <string name="toolbar">toolbar</string>
    <string name="alarm_freq_once_cd">select to hear alarm only once</string>
    <string name="alarm_freq_repeat_cd">select to repeat alarm next weeks</string>
    <string name="alarm_on_sunday_cd">alarm on sunday   </string>
    <string name="alarm_on_monday_cd">alarm on monday   </string>
    <string name="alarm_on_tuesday_cd">alarm on tuesday  </string>
    <string name="alarm_on_wednesday_cd">alarm on wednesday</string>
    <string name="alarm_on_thursday_cd">alarm on thursday </string>
    <string name="alarm_on_friday_cd">alarm on friday   </string>
    <string name="alarm_on_saturday_cd">alarm on saturday </string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="time_until_next_alarm_cd">time until next alarm</string>
    <string name="smile_time_x5_cd">select smile time x5 seconds</string>
    <string name="smile_time_x10_cd">select smile time x10 seconds</string>
    <string name="x5_smile_time_image_cd">x5 smile time image</string>
    <string name="x10_smile_time_image_cd">x10 smile time image</string>
    <string name="save_button_cd">save button</string>
    <string name="cancel_button_cd">cancel button</string>
    <string name="time_till_next_alarm_cd">time till next alarm</string>
    <string name="alarm_time_cd">alarm time</string>
    <string name="smile_time_to_wakeup_cv">smile time to wake up</string>
    <string name="smiling_image_cd">smiling image</string>
    <string name="thanks_image_cd">thanks image</string>
    <string name="smile_alarm_team_loves_you_cd">smile alarm team loves you</string>
    <string name="go_back_to_main_menu_button_cd">go back to main menu button</string>
    <string name="give_us_your_best_smile_default">Give us your best smile for 5 seconds!</string>
    <string name="once">Once</string>
    <string name="repeat">Repeat</string>
    <string name="smile_to_wakeup_time_default">Smile to wakeup time:</string>
    <string name="smile_time_5_seconds_default">x5 seconds</string>
    <string name="smile_time_10_seconds_default">x10 seconds</string>
    <string name="smile_to_wake_up_default">5 Seconds smile to wake up!</string>
    <string name="smile_alarm_team_loves_you">Smile Alarm team loves you!</string>
    <string name="my_day_is_awsome">My day is awsome</string>
    <string name="appwidget_text">no alarm, SMILE!</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text_default">welcome to Smile Alarm</string>
</resources>
