<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.benjaminlize.smilealarm.EditAlarm"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="12dp"
            android:id="@+id/linearLayout4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="click to create alarm"
                android:id="@+id/alarm_time"
                android:fitsSystemWindows="true"
                android:textColor="@color/white"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/alarm_time_cd"

                />

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_till_next_alarm_main"
        android:id="@+id/next_alarm_time"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:contentDescription="@string/time_till_next_alarm_cd"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/next_alarm_time"
            android:layout_centerHorizontal="true">

            <Button
                android:text="@string/sunday"
                android:id="@+id/togglebuttonsun"
                style="@style/Buttons_day"
                android:contentDescription="@string/alarm_on_sunday_cd"

                />
            <Button
                android:text="@string/monday"
                android:id="@+id/togglebuttonmon"
                style="@style/Buttons_day"
                android:contentDescription="@string/alarm_on_monday_cd"

                />
            <Button
                android:text="@string/tuesday"
                android:id="@+id/togglebuttontue"
                style="@style/Buttons_day"
                android:contentDescription="@string/alarm_on_tuesday_cd"

                />
            <Button
                android:text="@string/wednesday"
                android:id="@+id/togglebuttonwed"
                style="@style/Buttons_day"
                android:contentDescription="@string/alarm_on_wednesday_cd"
                />
            <Button
                android:text="@string/thursday"
                android:id="@+id/togglebuttonthu"
                style="@style/Buttons_day"
                android:contentDescription="@string/alarm_on_thursday_cd"

                />
            <Button
                android:text="@string/friday"
                android:id="@+id/togglebuttonfri"
                style="@style/Buttons_day"
                android:contentDescription="@string/alarm_on_friday_cd"

                />
            <Button
                android:text="@string/saturday"
                android:id="@+id/togglebuttonsat"
                style="@style/Buttons_day"
                android:contentDescription="@string/alarm_on_saturday_cd"

                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/smile_to_wake_up_default"
            android:id="@+id/smileTime_main"
            android:gravity="center"
            android:layout_above="@+id/smile_image_main"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/smile_time_to_wakeup_cv"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:id="@+id/linearLayout3"
            android:layout_below="@+id/smileTime_main"
            android:layout_centerHorizontal="true">

        </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smile_image_main"
        android:src="@drawable/smiley1"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/smiling_image_cd"
        />


</RelativeLayout>
